gccida/g0/refers_to_regno_for_reload_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/reload.c:6559:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+34h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/reload.c:6602:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = mode_class_0[*( ( unsigned __int8 *)xa + 2)] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/reload.c:6603:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)xa + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/reload.c:6638:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
xa = ( rtx)xa[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/reload.c:6680:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)xa + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/reload.c:6681:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)xa + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/refers_to_regno_for_reload_p/src/obj/reload.o] Error 1
